1999-03-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (create_class_refs): Look in swarmEnvironment
	object, not class for globalZone instance variable.

	* directory.[hm] (java_directory_init): Add swarmEnvironment arg.

	* SwarmEnvironment.m (Java_swarm_SwarmEnvironment_initSwarm): 
	Accomodate.

	* JavaProxy.m ([JavaProxy -forward::]): Use
	addArgument:ofObjCType: instead of switch.  Create and perform the
	FCall.

	* directory.[hm] (java_instantiate_using_from_object,
	java_instantiate_using_from_class): New functions.
	(java_instantiate_name): Remove.

	* directory.h (JINSTANTIATEUSINGFROMCLASS,
	JINSTANTIATEUSINGFROMOBJECT): New macros.
	(JINSTANTIATENAME): Remove.
	
	* directory.m (o_globalZone): Make jobject, not jclass.
	(create_class_refs, java_directory_init): Accomodate.

1999-03-23  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (create_class_refs): Type of the field global zone
	is set to swarm/GlobalZone in GetFieldId call.
	(create_class_refs): Remove diagnostics.

1999-03-22  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.m (Java_swarm_SwarmEnvironment_initSwarm): Call
	initSwarmApp before  the java_directory_init function.

	* directory.m (create_class_refs): find returns global references.
	(create_class_refs): c_object is set to a global reference to
	java.lang.Object
	(create_class_refs): c_globalZone is set to a global reference
	of a class GlobalZone obtained from SwarmEnvironment field.
	(java_directory_java_find): Set java_object field of pattern
	to global reference to an object.
	(java_instantiate): Return a global reference to a new object.

1999-03-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (create_class_refs): Use GetFieldID and
	GetObjectField instead of GetStaticFieldID and GetStaticObjectField
	(for globalZone).

1999-03-22  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (compare_java_objects): Move compare_java_objects 